# hedi123-dev-projet-c

gestion-servicehedi/: Makefile  config.h  config.status  configure  configure.in  instructions.txt  projet-c.glade.bak  projet-c.gladep.bak  projethedi.glade.bak  projethedi.gladep  reservations_1.txt  service.txt
gestion-servicehedi/autom4te.cache/: output.1  requests  traces.0  traces.1
gestion-servicehedi/po/: Makefile  Makefile.in
gestion-servicehedi/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gestion-service  interface.c  interface.c.bak  interface.h.bak  main.c  service.c  service.h  service.txt
gestion-servicehedi/src/.deps/: callbacks.Po  service.Po
